--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -7,4 +7,6 @@
 
 
 
-<P><%= link_to "再度合体する！" ,notes_index_path %></P>
+<P><%= link_to "再度合体する！" ,notes_index_path , class: "post"%></P>
+
+<p><%= link_to "topに戻る", "/" , class: :post%></p>
