--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <ul class="header_menu">
        <% if user_signed_in? %>
           <li><%= link_to "ログアウト", destroy_user_session_path ,method: :delete , class: "post"%></li>
-          <li><a href="#" class="post">投稿する</a></li>
+          <li><%= link_to "投稿する", new_note_path ,class: "post" %></li>
        <% else %>
           <li><%= link_to "新規登録", new_user_registration_path, class: "post"%></li>
           <li><%= link_to "ログイン", new_user_session_path, class: "post" %></li>
